force-app/main/default/objects/Quota_Details__c/fields/Cap_Rate_LCY_Not_For_Points__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate_LCY_Not_For_Points__c</fullName>
    <description>Cap Rate LCY Not For Points</description>
    <inlineHelpText>Cap Rate LCY Not For Points</inlineHelpText>
    <label>Cap Rate LCY Not For Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>