force-app/main/default/objects/Quota_Details__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <description>Employee Email</description>
    <inlineHelpText>Employee Email</inlineHelpText>
    <label>Employee Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>