force-app/main/default/objects/Quota_Details__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <description>Employee Status</description>
    <inlineHelpText>Employee Status</inlineHelpText>
    <label>Employee Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>