force-app/main/default/objects/Quota_Details__c/fields/ICP_Template__c.field-meta.xml
<CustomField>
    <fullName>ICP_Template__c</fullName>
    <description>ICP Template</description>
    <inlineHelpText>ICP Template</inlineHelpText>
    <label>ICP Template</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>