force-app/main/default/objects/Quota_Details__c/fields/M_2_Quota__c.field-meta.xml
<CustomField>
    <fullName>M_2_Quota__c</fullName>
    <description>M 2 Quota</description>
    <inlineHelpText>M 2 Quota</inlineHelpText>
    <label>M 2 Quota</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>