force-app/main/default/objects/Quota_Details__c/fields/Person_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Person_Termination_Date__c</fullName>
    <description>Person Termination Date</description>
    <inlineHelpText>Person Termination Date</inlineHelpText>
    <label>Person Termination Date</label>
    <type>Date</type>
</CustomField>