force-app/main/default/objects/Quota_Details__c/fields/Quarter_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Quota_Amount__c</fullName>
    <description>Quarter Quota Amount</description>
    <inlineHelpText>Quarter Quota Amount</inlineHelpText>
    <label>Quarter Quota Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>