force-app/main/default/objects/Quota_Details__c/fields/Total_Nov_Commission_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Nov_Commission_Amount_LCY__c</fullName>
    <description>Total Nov Commission Amount LCY</description>
    <inlineHelpText>Total Nov Commission Amount LCY</inlineHelpText>
    <label>Total Nov Commission Amount LCY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>