force-app/main/default/objects/Quota_Details__c/fields/Variable_Currency__c.field-meta.xml
<CustomField>
    <fullName>Variable_Currency__c</fullName>
    <description>Variable Currency</description>
    <inlineHelpText>Variable Currency</inlineHelpText>
    <label>Variable Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>